@startuml
entity Post {
  * id : BIGSERIAL <<PK>>
  --
  * title : VARCHAR(255)
  * content : TEXT
  likes : INTEGER DEFAULT 0
  filename : VARCHAR(500)
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity Comment {
  * id : BIGSERIAL <<PK>>
  --
  * post_id : BIGINT <<FK>>
  * content : TEXT
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity Tag {
  * id : BIGSERIAL <<PK>>
  --
  * name : VARCHAR(25) <<UNIQUE>>
}

entity PostTags {
  * id : BIGSERIAL <<PK>>
  --
  * post_id : BIGINT <<FK>>
  * tag_id : BIGINT <<FK>>
  --
  <<UNIQUE(post_id, tag_id)>>
}

Post ||--o{ Comment : "has many"
Post ||--o{ PostTags : "has many"
Tag ||--o{ PostTags : "has many"

@enduml



